# once

./: CMakeLists.txt  Readme.md  dpkgbuild.7z  main.cpp  once.deb  qrc.qrc
Debian Build/DEBIAN/: control  postinst
